# journal-manager

./: .gitignore  MANIFEST.in  README.md  api.html  design-and-architecture.html  genindex.html  getting-started.html  index.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js  tox.ini
.github/: dependabot.yml
.github/workflows/: build-documentation.yml  build-package.yml  main.yml  publish-package.yml  single-test-suite.yml
_modules/: index.html  pathlib.html
_sources/: getting-started.md.txt  index.rst.txt
_sources/how-to/: create-journals.md.txt  setup-journal-manager.md.txt  setup-quick-notes-template.md.txt
_sources/reference/: journal_manager.cli.cli.rst.txt  journal_manager.cli.commands.build.rst.txt  journal_manager.cli.commands.journal.rst.txt  journal_manager.cli.commands.journal_commands.activate.rst.txt  journal_manager.cli.commands.journal_commands.create.rst.txt  journal_manager.cli.commands.journal_commands.deactivate.rst.txt  journal_manager.cli.commands.journal_commands.deregister.rst.txt  journal_manager.cli.commands.journal_commands.edit.rst.txt  journal_manager.cli.commands.journal_commands.register.rst.txt  journal_manager.cli.commands.journal_commands.rst.txt  journal_manager.cli.commands.journal_commands.show.rst.txt  journal_manager.cli.commands.rst.txt  journal_manager.cli.commands.setup.rst.txt  journal_manager.cli.commands.setup_commands.init.rst.txt  journal_manager.cli.commands.setup_commands.rst.txt  journal_manager.cli.commands.template.rst.txt  journal_manager.cli.commands.template_commands.register.rst.txt  (+16 more)
docs/: api.rst  conf.py  design-and-architecture.md  index.rst
how-to/: build-journals.html  create-journals.html  setup-a-personal-journals-server.html  setup-journal-manager.html  setup-quick-notes-template.html
reference/: journal_manager.cli.cli.html  journal_manager.cli.commands.build.html  journal_manager.cli.commands.html  journal_manager.cli.commands.journal.html  journal_manager.cli.commands.journal_commands.activate.html  journal_manager.cli.commands.journal_commands.create.html  journal_manager.cli.commands.journal_commands.deactivate.html  journal_manager.cli.commands.journal_commands.deregister.html  journal_manager.cli.commands.journal_commands.edit.html  journal_manager.cli.commands.journal_commands.html  journal_manager.cli.commands.journal_commands.register.html  journal_manager.cli.commands.journal_commands.show.html  journal_manager.cli.commands.setup.html  journal_manager.cli.commands.setup_commands.html  journal_manager.cli.commands.setup_commands.init.html  journal_manager.cli.commands.template.html  journal_manager.cli.commands.template_commands.html  journal_manager.cli.commands.template_commands.register.html  journal_manager.cli.commands.template_commands.remove.html  journal_manager.cli.commands.template_commands.show.html  journal_manager.cli.html  journal_manager.cli.utils.html  journal_manager.cli.wrappers.general_proc_call.html  journal_manager.cli.wrappers.html  journal_manager.cli.wrappers.mkdocs_wrapper.html  journal_manager.cli.wrappers.node_wrapper.html  journal_manager.cli.wrappers.nvim_wrapper.html  journal_manager.core.api.html  journal_manager.core.exceptions.html  journal_manager.core.html  journal_manager.core.model.html  journal_manager.html  modules.html
test/: conftest.py  test_api.py  test_build.py  test_journal.py  test_parsers.py  test_setup.py  test_template.py  test_utils.py
(+89 files in other folders)
