[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "journal-manager"
version = "0.0.2"
description = ""
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE.txt" }
keywords = []
authors = [
  { name = "Daniel Martins Antunes", email = "danoan2008@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = ["dataclasses", "jinja2", "toml","typing_extensions", "mkdocs", "mkdocs-material", "importlib_resources", "quick_notes @ http://pypi-server.barriguinhas.fr/packages/quick_notes-1.0-py3-none-any.whl#md5=f841159054ed6a97bec9f6af7a244b62", "toml_dataclass @ http://pypi-server.barriguinhas.fr/packages/toml_dataclass-0.1.0-py3-none-any.whl#md5=002285ded5b7e2b5ad1301015f874c70"]

[project.urls]
Documentation = "https://github.com/danoan/journal-manager#readme"
Issues = "https://github.com/danoan/journal-manager/issues"
Source = "https://github.com/danoan/journal-manager"

[project.scripts]
journal-manager = "danoan.journal_manager.cli.cli:main"

# -------------------- build backend --------------------
[tools.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]
include = ["danoan*"]
namespaces = true 


# -------------------- code test --------------------
# Using this key instead of tool.pytest is
# temporary until transition to pyproject.toml
# is completed: https://docs.pytest.org/en/6.2.x/customize.html
[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--cov --strict-markers" 
xfail_strict = true
testpaths = [
    "tests"
]
pythonpath = [
"test" # Needed in order to import conftest.py in test modules
]

# -------------------- code coverage --------------------
# In order to make coverage read from pyproject.toml
# you should installed as: `pip install coverage[toml]`
# https://coverage.readthedocs.io/en/latest/config.html
[tool.coverage.run]
# I've setup this to false because coverage was returning an error while
# executing test_build.py. It is not ideal because it is nice to know which
# conditional paths in the code I am not covering. The error was:
# coverage.exceptions.DataError: Can't combine line data with arc data
branch = false  
source = [
    "danoan.journal_manager"
]

[tool.coverage.paths]
source = [
  "src/danoan/journal_manager",
]

[tool.coverage.report]
show_missing = true
skip_covered = true
omit = [
  "src/danoan/journal_manager/cli/cli.py"
]


# -------------------- code formatting --------------------
[tool.black]
line-length = 80


# -------------------- type checking --------------------
[tool.mypy]
python_version = 3.8
warn_unused_configs = true
show_error_context = true
pretty = true
namespace_packages = true
check_untyped_defs = true
ignore_missing_imports = true # libraries without py.typed marker raises an error if this is set to false
mypy_path = "src:test" # To make sure all intra-package references are tested. Without that, a module is tested on itself. Imports are not considered.
explicit_package_bases = true # To solve import conflicts of mypy



